# MP4Forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  build_desktop.py  build_macos_app.py  docker-compose.yml  pyproject.toml
.github/workflows/: build-desktop-app.yml  build-webapp-docker.yml  build.yml  docker-build.yml  lint.yml  ruff-lint.yml
backend/: main.py  schemas.py
core/: __version__.py  config.py  file_browser.py  job_states.py  muxer.py  queue_manager.py  queue_storage.py
core/enums/: job_status.py
core/logger/: __init__.py
core/payloads/: mux_job.py
core/utils/: autoqpf.py  file_utils.py  language.py  mediainfo.py  working_dir.py
docs/: MACOS_APP_BUNDLE.md
examples/: docker-compose.yml
frontend_desktop/: context.py  global_signals.py  main.py  package-lock.json  tab_registry.py
frontend_desktop/navigation/: nav.py
frontend_desktop/navigation/tabs/: audio.py  base.py  chapters.py  output.py  settings.py  state.py  subtitles.py  video.py
frontend_desktop/types/: nav.py
frontend_desktop/utils/: file_utils.py  general_worker.py
frontend_desktop/widgets/: basic_code_editor.py  combo_box.py  dnd_factory.py  lang_combo.py  multi_tabbed_widget.py  preset_title_editor.py  qtawesome_theme_swapper.py  resizable_stacked_widget.py  scrollable_error_dialog.py  track_import_dialog.py  track_selector_dialog.py  utils.py
frontend_web/: package-lock.json  package.json  vite.config.ts
frontend_web/src/: app.css  app.html
frontend_web/src/lib/: api.ts
frontend_web/src/lib/components/: AudioTab.svelte  ChaptersTab.svelte  FileBrowser.svelte  FileBrowserModal.svelte  FileInput.svelte  LanguageSelect.svelte  Modal.svelte  MultiTrackWidget.svelte  Navigation.svelte  OutputTab.svelte  PresetTitleEditor.svelte  SaveFileBrowser.svelte  SaveFileBrowserModal.svelte  SettingsTab.svelte  SubtitlesTab.svelte  Toast.svelte  TrackImportDialog.svelte  VideoTab.svelte
frontend_web/src/lib/stores/: fileBrowser.ts  navigation.ts  queue.ts  settings.ts  toast.ts  tracks.ts
frontend_web/src/lib/utils/: languages.ts
frontend_web/src/routes/: +layout.svelte  +page.svelte
