[project]
name = "mp4-forge"
version = "2.0.0-dev"
description = "MP4 muxing tool with desktop and web interfaces"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Core dependencies (used by all)
    # "pydantic>=2.0.0",
]

[project.optional-dependencies]
# core
core = [
    "python-iso639>=2025.11.11",
    "pymediainfo",
    "typing_extensions",
    "tomlkit",
    "autoqpf>=0.2.5",
    "psutil",
    "shortuuid",
    "semver",
]

# desktop GUI
desktop = [
    "pyside6==6.8.3",
    "qtawesome>=1.4.0",
    "python-iso639>=2025.11.11",
    "pymediainfo",
    "typing_extensions",
]

# web backend (for headless/remote access)
# web = [
#     "fastapi>=0.115.0",
#     "uvicorn[standard]>=0.31.0",
# ]

# build tools
# build = [
#     "pyinstaller>=6.0.0",
# ]

# all dependencies (for development)
dev = [
    "pyside6==6.8.3",
    "qtawesome>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pyinstaller>=6.0.0",
    "debugpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "frontend_desktop", "backend"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP"]
